fix: fix search bar overflow

--- a/project-management-app/src/app/core/components/search-bar/search-bar.component.scss
+++ b/project-management-app/src/app/core/components/search-bar/search-bar.component.scss
@@ -15,7 +15,7 @@
   }
 
   @media (max-width: 960px) {
-    width: 12rem;
+    width: 10rem;
   }
 
   @media (max-width: 425px) {
